tests/NormalTests/paczka1/small_fuzzy/36831560.err
Error in line 9: S487 A48 2,9
Error in line 6: nHeUNVwkGwk S487 47,4
Error in line 12: 3o5FtY S487 3,3
